--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -90,26 +90,8 @@
 
     <!-- header area end -->
 
-    <!-- BREADCRUMB AREA -->
-    <section class="rts-breadcrumb breadcrumb-height breadcumb-bg" style="background-image: url(assets/images/campus/003C.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="breadcrumb-content">
-                        <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">about</li>
-                        </ul>
-                        <h2 class="section-title">About Shri Harkrishan Public School</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- BREADCRUMB AREA END -->
 
-
-    <!-- about university -->
+    <!-- about School -->
     <section class="rts-about-university rts-section-padding">
         <div class="container">
             <div class="row">
@@ -143,7 +125,7 @@
                         </div>
                         <div class="single-about-info">
                             <div class="content">
-                                <h3 class="title">31</h3>
+                                <h3 class="title">41</h3>
                                 <img src="assets/images/icon/12.svg" alt="">
                             </div>
                             <div class="desc">
