--- a/admission.html
+++ b/admission.html
@@ -66,7 +66,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -126,7 +126,7 @@
                                     <li>Birth Certificate</li>
                                     <li>S.L.C & Report Card</li>
                                     <li>Aadhar Card of Child</li>
-                                    <li>Aadhar Card of Parents</li>
+                                    <li>Family ID</li>
                                     <li>Three latest passport size snaps</li>
                                 </ul>
                                 <h4 id="note_for_parents">Note to Parents</h4>
@@ -136,10 +136,10 @@
                                     <li>Tuition fee is payable for the whole academic year i.e. 12 months from April to March. Transport charges are to be paid for 11 months excluding the month of June.</li>
                                     <li>In case of the Annual Fee payment plan, all the charges for the whole year are to be deposited in one go. In such a case, a discount of one month's tuition fee is given.</li>
                                     <li>Annual fee payment plan can be opted only at the beginning of the session in April.</li>
-                                    <li>The parents have the choice to deposit the fee by cash or cheque.</li>
-                                    <li>In case of bouncing of the cheque due to any reason, a fine of Rs. 400/- per cheque will have to be paid by the parent.</li>
+                                    <li>The parents have the choice to deposit the fee by cash or online (UPI/Net Banking).</li>
+                                    <li>In case of bouncing of the cheque due to any reason, a fine of &#8377; 400/- per cheque will have to be paid by the parent.</li>
                                     <li>All dues of the student should be cleared before each term examination otherwise he/she will not be allowed to appear in exams.</li>
-                                    <li>In case of non-payment of dues till the end of the due month, the name of the child will be struck off the rolls. The child, however, can be re-admitted with the permission of the principal. In such a case, an amount of Rs. 500/- along with up-to-date fine as per rules will be charged for re-admission.</li>
+                                    <li>In case of non-payment of dues till the end of the due month, the name of the child will be struck off the rolls. The child, however, can be re-admitted with the permission of the principal. In such a case, an amount of &#8377; 500/- along with up-to-date fine as per rules will be charged for re-admission.</li>
                                     <li>School leaving certificate will be issued one week after the submission of the application for the same in the school office.</li>
                                 </ul>
                             </div>                            
