--- a/faculty.html
+++ b/faculty.html
@@ -66,7 +66,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -89,24 +89,6 @@
     </header>
     <!-- header area end -->
 
-    <!-- BREADCRUMB AREA -->
-    <section class="rts-breadcrumb breadcrumb-height breadcumb-bg" style="background-image:url(assets/images/campus/003C.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="breadcrumb-content">
-                        <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Faculty Details</li>
-                        </ul>
-                        <h2 class="section-title">Shri Harkrishan Public School Faculty Details</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- BREADCRUMB AREA END -->
-
 
     <!-- faculty directory -->
     <section class="rts-faculty rts-section-padding">
@@ -124,12 +106,12 @@
                     <div class="single-staff">
                         <div class="single-staff__content">
                             <div class="staf-image">
-                                <img src="assets/images/faculty/Director.jpeg" alt="staff-image">
+                                <img src="assets/images/faculty/Director.jpeg" alt="staff-image" style="width: 200px; height: 300px;">
                             </div>
                             <div class="staf-info">
                                 <h5 class="name">G S Sra</h5>
                                 <span class="designation">Director</span>
-                                <a href="mailto:gurnamsra@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>gurnamsra@gmail.com</a>
+                                <a href="mailto:shpschooledu@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>shpschooledu@gmail.com</a>
                                 <div class="staf-info__speciality">
                                     <p>M.Sc. Chemistry | PGDCA | B.Ed. | MBA</p>
                                 </div>
@@ -143,52 +125,14 @@
                     <div class="single-staff">
                         <div class="single-staff__content">
                             <div class="staf-image">
-                                <img src="assets/images/Director.jpeg" alt="staff-image">
+                                <img src="assets/images/faculty/principal.webp" alt="staff-image" style="width: 200px; height: 300px;">
                             </div>
                             <div class="staf-info">
                                 <h5 class="name">Ravneet Kaur</h5>
                                 <span class="designation">Principal</span>
-                                <a href="mailto:ravneetkaur0950@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>Ravneetkaur0950@gmail.com</a>
+                                <a href="mailto:shpschooledu@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>shpschooledu@gmail.com</a>
                                 <div class="staf-info__speciality">
                                     <p>DEGREES</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End single staff detail -->
-                 <!-- single staff item -->
-                <div class="col-lg-6 col-md-11">
-                    <div class="single-staff">
-                        <div class="single-staff__content">
-                            <div class="staf-image">
-                                <img src="assets/images/Director.jpeg" alt="staff-image">
-                            </div>
-                            <div class="staf-info">
-                                <h5 class="name">Name</h5>
-                                <span class="designation">designation</span>
-                                <a href="mailto:gurnamsra@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>email@gmail.com</a>
-                                <div class="staf-info__speciality">
-                                    <p>info__speciality</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End single staff detail -->
-                 <!-- single staff item -->
-                <div class="col-lg-6 col-md-11">
-                    <div class="single-staff">
-                        <div class="single-staff__content">
-                            <div class="staf-image">
-                                <img src="assets/images/Director.jpeg" alt="staff-image">
-                            </div>
-                            <div class="staf-info">
-                                <h5 class="name">Name</h5>
-                                <span class="designation">designation</span>
-                                <a href="mailto:gurnamsra@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>email@gmail.com</a>
-                                <div class="staf-info__speciality">
-                                    <p>info__speciality</p>
                                 </div>
                             </div>
                         </div>
