--- a/message.html
+++ b/message.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <<!-- header area start -->
+    <!-- header area start -->
     <header class="header header__sticky v__2">
         <div class="container">
             <div class="row">
@@ -66,7 +66,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -89,26 +89,6 @@
     </header>
     <!-- header area end -->
 
-
-    <!-- BREADCRUMB AREA -->
-    <section class="rts-breadcrumb breadcrumb-height breadcumb-bg" style="background-image: url(assets/images/campus/003C.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="breadcrumb-content">
-                        <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Director's Message</li>
-                        </ul>
-                        <h2 class="section-title">Director's Message</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- BREADCRUMB AREA END -->
-
-
     <!-- Director Message content -->
     <div class="rts-athletics rts-section-padding">
         <div class="container">
@@ -119,29 +99,36 @@
                             <div class="athletics-image">
                                 <img src="assets/images/faculty/Director.jpeg" alt="director-message">
                             </div>
-                            <p class="athletics-description mt--35" style="text-align: justify;">
-                                → Every child is like a seed which has the potential to grow if it is nourished with love and care under the right guidance. Our goal is to graduate independent learners, whose mastery of basic skills and academic curiosity will serve as the bedrock of a purposeful life. Childhood is the best time to lay the foundation of the core values essential for the overall development of the future citizen of tomorrow.
-                                <br/><br/> SHPS is a place where your child will be known and nurtured. It is a school founded on academic excellence and committed to providing our students with a solid educational foundation that will carry them through a lifetime of learning. As you learn more about our community, please don't hesitate to reach out to me with any questions. 
-                            </p>
+                            <div class="athletics-image mt--45">
+                                <img src="assets/images/awards/009.jpg" alt="campus-single">
+                            </div> 
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="right-content">
                             <div class="right-content__section">
-                                <h2 class="rts-section-title mb--15">Director's Message
-                                </h2>
+                                <h2 class="rts-section-title mb--15">Director's Message</h2>
                                 <p class="description" style="text-align: justify;">
-                                    Every child is like a seed which has the potential to grow if it is nourished with love and care under the right guidance. Our goal is to graduate independent learners, whose mastery of basic skills and academic curiosity will serve as the bedrock of a purposeful life. Childhood is the best time to lay the foundation of the core values essential for the overall development of the future citizen of tomorrow.
-
-                                <br/><br/>Shri Harkrishan Public School is a place that cares the every student. Equal attention is given to the development of the children both academically like Science and G.K. Club, English Speaking and Calligraphy Clubs, Abacus and Vedic Math’s Club and in extra-curricular activities like different yoga, karate, music, dance, art and craft, etc. Year by year the efforts of all our staff and students have taken the school forward in terms of excellence. The school has progressed in leaps and bounds. Today we stand as one of the noted educational landmarks in the jhansa,Kurukshetra. Rote learning is discouraged and Research Based learning is the norm, where each pupil is guided through an individualized work plan in consonance with his/her potential, thereby providing a complete learning experience.
-
-                                <br/><br/>At Shri Harkrishan Public School, we are dedicated for our school objective to awaken the “joy” in Creative Expression and Knowledge and we are utterly committed for quality education and continuous process of improvement for the benefit of the students. A committed and supportive management, dedicated teachers, caring and co-operative parents blend harmoniously to create a child centric school.
-
-                                <br/>
-                                </p>
-                                <div class="athletics-image mt--45">
-                                    <img src="assets/images/awards/009.jpg" alt="campus-single">
-                                </div>
+                                    Welcome to Shri Harkrishan Public School, where our vision is to cultivate a nurturing environment where every child's potential can truly blossom. As educators and mentors, we believe that every child is like a seed—full of promise and possibilities. With the right blend of love, care, and guidance, we are dedicated to helping each student grow into a confident, independent learner who is well-prepared for the future.
+                                    <br/><br/>
+                                    At our school, we understand that the foundation of a child's development begins during these formative years. Our mission is to instill core values and essential skills that will support our students throughout their lives. 
+                                    <br/><br/>
+                                    We are proud to offer a diverse range of opportunities for our students. Academically, we focus on subjects such as Science, General Knowledge, English Speaking, and Calligraphy through specialized clubs and programs. Beyond the classroom, we offer extracurricular activities that include yoga, karate, music, dance, and art and craft. These activities are designed to foster creativity, discipline, and a love for learning.
+                                    <br/><br/>
+                                    Over the years, the collective efforts of our dedicated staff and enthusiastic students have propelled our school to new heights. Today, Shri Harkrishan Public School stands as a respected institution in Jhansa, Kurukshetra, known for our commitment to excellence and innovation in education.
+                                    <br/><br/>
+                                    We reject rote learning and instead embrace a research-based approach to education. Each student is guided through a personalized learning journey that aligns with their unique abilities and interests, ensuring a comprehensive and fulfilling educational experience.
+                                    <br/><br/>
+                                    Our goal is not only to impart knowledge but to ignite a genuine joy for creative expression and discovery. With the support of our dedicated management, exceptional teachers, and cooperative parents, we are creating a child-centered learning environment where every student can thrive.
+                                    <br/><br/>
+                                    Thank you for being a part of our community. Together, we are shaping a brighter future for our children.
+                                    <br/><br/>
+                                    Warm regards,
+                                    <br/>
+                                    <strong>G S Sra</strong>
+                                    <br/>
+                                    Director, Shri Harkrishan Public School
+                                </p>    
                             </div>
                         </div>
                     </div>
