--- a/vision.html
+++ b/vision.html
@@ -66,7 +66,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -95,10 +95,6 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcrumb-content">
-                        <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Vision</li>
-                        </ul>
                         <h2 class="section-title">Shri Harkrishan Public School Vision</h2>
                     </div>
                 </div>
