--- a/facility.html
+++ b/facility.html
@@ -33,7 +33,7 @@
         }
         .section{
             border-bottom: 1px solid #cdcdcd;
-            padding: 50px 0px 50px 100px;
+            padding: 3em;
         }
     </style>
 </head>
@@ -79,7 +79,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -108,10 +108,6 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcrumb-content">
-                        <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Facilities</li>
-                        </ul>
                         <h2 class="section-title">SHPS Facilities</h2>
                     </div>
                 </div>
