--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             color: black;
             border-bottom: 1px solid #ddd;
         }
+        .social_links_shps a{
+            padding: 20px;
+            font-size: 1.5em;
+        }
+        .social_links_shps a:hover{
+            color: rgb(239, 89, 89);
+        }
     </style>
 
    
@@ -102,7 +109,7 @@
                                             <a href="MandatoryDisclosure.html" class="navigation__menu--item__link">Mandatory Disclosure</a>
                                         </li>
                                         <li class="navigation__menu--item">
-                                            <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" class="navigation__menu--item__link">Gallery</a>
+                                            <a href="gallery.html" class="navigation__menu--item__link">Gallery</a>
                                         </li>
                                         <li class="navigation__menu--item">
                                             <a href="contact.html" class="navigation__menu--item__link">Contact</a>
@@ -164,7 +171,7 @@
                     <!-- single slides end -->
                     <!-- single slides -->
                     <div class="swiper-slide">
-                        <div class="banner__wrapper--bg" style="background-image: url(assets/images/campus/002.jpg);">
+                        <div class="banner__wrapper--bg" style="background-image: url(assets/images/campus/002C.jpg);">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-12">
@@ -189,6 +196,13 @@
                 </div>
             </div>
             <div class="banner__slides--navigation">
+                <div class="social_links_shps" style="text-align: center; color: white; margin-bottom: 30px;">
+                    <a href="https://www.facebook.com/ShriHarkrishanPublicSchoolKurukshetra/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/shriharkrishanpublicschool/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="tel:+918607257200" style="margin-right: 15px;">
+                        <i class="fa-solid fa-phone"></i>
+                    </a>
+                </div>
                 <div class="banner__slides--navigation--single">
                     <h5 class="nav__title">Enroll Now</h5>
                     <a href="admission.html" class="nav__description">Browse the Admission Procedure and Information</a>
@@ -242,7 +256,9 @@
                             knowledge meets innovation
                         </div>
                         <h2 class="about__right--content--title">About School</h2>
-                            <p class="about__right--content--description">Shri Harkrishan Public School, located in VPO Jhansa, district Kurukshetra, is renowned for its prestigious standing. The school's facilities include a Pre-Primary Section, Primary Segment, Secondary and Senior Secondary Blocks, featuring spacious classrooms equipped with smart boards. Additionally, it has a separate Science Block, Computer Room, Library, Home Science Room, and Activity Room. Other amenities comprise a. Conference Room, Fine Art Room, Music Room, Dance Room, School Canteen, Roller Skating Hall, and Medical Room, complemented by a substantial ground for sports such as Badminton, Roller Skating, Basketball, Volleyball, and more.</p>
+                            <p class="about__right--content--description">
+                                Shri Harkrishan Public School, located in VPO Jhansa, Kurukshetra, is renowned for its prestigious reputation in education. Our campus features modern facilities including a Pre-Primary Section, Primary, Secondary, and Senior Secondary Blocks with spacious classrooms and smart boards. We also offer a dedicated Science Block, Computer Room, Library, Home Science Room, and Activity Room. Additional amenities include a Conference Room, Fine Art Room, Music Room, Dance Room, School Canteen, Roller Skating Hall, and a Medical Room. Our expansive grounds support a variety of sports, including Badminton, Roller Skating, Basketball, and Volleyball.
+                            </p>
                         <a href="about.html" class="rts-theme-btn btn-arrow">Know More
                         </a>
                     </div>
@@ -416,7 +432,7 @@
                     <h2 class="rts__section--wrapper--title">
                         Campus <span> Life</span>
                     </h2>
-                    <a href="https://photos.app.goo.gl/4bvU8RByefBUxccm7" target="_blank" style="color: white;">Visit Gallery <span><i class="fa-light fa-arrow-right"></i></span></a>
+                    <a href="gallery.html" target="_blank" style="color: white;">Visit Gallery <span><i class="fa-light fa-arrow-right"></i></span></a>
                 </div>
             </div>
             <!-- content -->
