--- a/faculty.html
+++ b/faculty.html
@@ -132,7 +132,7 @@
                                 <span class="designation">Principal</span>
                                 <a href="mailto:shpschooledu@gmail.com" class="email-contact"><span><i class="fa-light fa-envelope"></i></span>shpschooledu@gmail.com</a>
                                 <div class="staf-info__speciality">
-                                    <p>DEGREES</p>
+                                    <p>M.Sc. (Mathematics) | PGDCA | B.Ed. | DISM</p>
                                 </div>
                             </div>
                         </div>
