--- a/facility.html
+++ b/facility.html
@@ -180,7 +180,7 @@
                 
                 <div class="col-lg-6 col-md-11">
                     <div class="section-image">
-                        <img src="assets/images/transport/1.JPG" alt="Achievements in Sports">
+                        <img src="assets/images/transport/1.JPG" alt="Transport">
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-11">
