--- a/facility.html
+++ b/facility.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-lg-6 col-md-11">
                     <div class="section-image">
-                        <img src="assets/images/campus/021.jpg" alt="Achievements in Sports">
+                        <img src="assets/images/campus/021.jpg" alt="Science Labs">
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                 
                 <div class="col-lg-6 col-md-11">
                     <div class="section-image">
-                        <img src="assets/images/campus/007.jpg" alt="Achievements in Sports">
+                        <img src="assets/images/campus/007.jpg" alt="Audio Visual Classes">
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-11">
