--- a/gallery.html
+++ b/gallery.html
@@ -157,7 +157,7 @@
             <h2 class="text-center mb-5">Photo Albums</h2>
             <div class="gallery-container">
                 <!-- Album 1 -->
-                <a href="#" class="gallery-box album-link" target="_blank">
+                <a href="https://photos.app.goo.gl/54EFYi3YQQBxsac57" class="gallery-box album-link" target="_blank">
                     <img src="assets/images/albums/2023.jpg" alt="Album 1">
                     <div class="album-name">Annual Function 2023-24</div>
                 </a>
